[package]
name = "nexus_tool"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "net"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nautilus-enclave = { git = "https://github.com/Ashwin-3cS/nautilus-cli.git" }

axum = { version = "0.7", default-features = false, features = ["json", "query", "tokio", "http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }

hex = "0.4"
sha2 = { version = "0.10", features = [] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli"] }
thiserror = "2.0"
schemars = "1.2"
jsonschema = "0.46"

[dependencies.nexus-sdk]
features = ["walrus"]
git = "https://github.com/Talus-Network/nexus-sdk"
tag = "v2.0.0-rc.1"

[features]
default = []
aws = ["nautilus-enclave/nsm"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
